--- a/src/components/StartupPage/ReadyToGo/Card/styles.module.less
+++ b/src/components/StartupPage/ReadyToGo/Card/styles.module.less
@@ -20,14 +20,16 @@
     justify-content: space-between;
   }
 
-  img {
-    max-width: 238px;
-    max-height: 200px;
-  }
-
   &:hover {
     border-color: var(--violet300);
     cursor: pointer;
+  }
+
+  @media (min-width: 981px) {
+    img {
+      max-width: 238px;
+      max-height: 200px;
+    }
   }
 
   @media (max-width: 1580px) {
