--- a/src/components/StartupPage/WhatFoundersAreSaying/styles.module.less
+++ b/src/components/StartupPage/WhatFoundersAreSaying/styles.module.less
@@ -11,12 +11,18 @@
     max-width: 311px;
     width: 100%;
 
-    @media (max-width: 768px) {
-      margin: auto;
-    }
-
     @media (max-width: 425px) {
       max-width: 100%;
+    }
+  }
+
+  @media (max-width: 768px) {
+    h2 {
+      text-align: center;
+    }
+
+    a {
+      margin: auto;
     }
   }
 }
